--- a/inde.html
+++ b/inde.html
@@ -9,6 +9,32 @@
   <script src="calc.js" defer></script>
 </head>
 <body>
-  
+  <div class="calc">
+    <div class="display">
+      
+    </div>
+    <div class="input">
+      <div class="nums">
+        <button class="num-btn" id="7">7</button>
+        <button class="num-btn" id="8">8</button>
+        <button class="num-btn" id="9">9</button>
+        <button class="num-btn" id="4">4</button>
+        <button class="num-btn" id="5">5</button>
+        <button class="num-btn" id="6">6</button>
+        <button class="num-btn" id="1">1</button>
+        <button class="num-btn" id="2">2</button>
+        <button class="num-btn" id="3">3</button>
+        <button class="num-btn zero" id="0">0</button>
+        <button class="num-btn" id="decimal">.</button>
+      </div>
+      <div class="operators">
+        <button class="operator" id="plus">+</button>
+        <button class="operator" id="minus">-</button>
+        <button class="operator" id="multiply">*</button>
+        <button class="operator" id="divide">/</button>
+        <button class="operator" id="equal">=</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
