Add few changes(html and css) and button functions

--- a/inde.html
+++ b/inde.html
@@ -10,29 +10,28 @@
 </head>
 <body>
   <div class="calc">
-    <div class="display">
-      
-    </div>
+    <div class="display"></div>
     <div class="input">
       <div class="nums">
-        <button class="num-btn" id="7">7</button>
-        <button class="num-btn" id="8">8</button>
-        <button class="num-btn" id="9">9</button>
-        <button class="num-btn" id="4">4</button>
-        <button class="num-btn" id="5">5</button>
-        <button class="num-btn" id="6">6</button>
-        <button class="num-btn" id="1">1</button>
-        <button class="num-btn" id="2">2</button>
-        <button class="num-btn" id="3">3</button>
-        <button class="num-btn zero" id="0">0</button>
-        <button class="num-btn" id="decimal">.</button>
+        <button class="num-btn num" id="7">7</button>
+        <button class="num-btn num" id="8">8</button>
+        <button class="num-btn num" id="9">9</button>
+        <button class="num-btn num" id="4">4</button>
+        <button class="num-btn num" id="5">5</button>
+        <button class="num-btn num" id="6">6</button>
+        <button class="num-btn num" id="1">1</button>
+        <button class="num-btn num" id="2">2</button>
+        <button class="num-btn num" id="3">3</button>
+        <button class="num-btn num" id="0">0</button>
+        <button class="num-btn num" id="decimal">.</button>
+        <button class="num-btn" id="equal">=</button>
       </div>
       <div class="operators">
-        <button class="operator" id="plus">+</button>
-        <button class="operator" id="minus">-</button>
-        <button class="operator" id="multiply">*</button>
-        <button class="operator" id="divide">/</button>
-        <button class="operator" id="equal">=</button>
+        <button class="operator" id="delete">CE</button> 
+        <button class="operator op" id="/">&divide;</button>
+        <button class="operator op" id="*">&times;</button>
+        <button class="operator op" id="-">&minus;</button>
+        <button class="operator op" id="+">&plus;</button>
       </div>
     </div>
   </div>
