Add calculator functions

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
       <div class="operators">
         <button class="operator" id="delete">CE</button> 
-        <button class="operator op" id="/">&divide;</button>
-        <button class="operator op" id="*">&times;</button>
-        <button class="operator op" id="-">&minus;</button>
-        <button class="operator op" id="+">&plus;</button>
+        <button class="operator op" id="/">/</button>
+        <button class="operator op" id="*">*</button>
+        <button class="operator op" id="-">-</button>
+        <button class="operator op" id="+">+</button>
       </div>
     </div>
   </div>
